--- a/app/scss/components/buttons.scss
+++ b/app/scss/components/buttons.scss
@@ -15,4 +15,26 @@
             background-color: #2771b8;
         }
     }
+
+    &--orange {
+        background-color: $orange;
+
+        &:hover {
+            cursor: pointer;
+        }
+    }
 }
+
+.forum-btn {
+    text-decoration: none;
+    color: $white;
+    font-size: 18px;
+    line-height: 20px;
+    padding: 15px 0;
+    display: block;
+    text-align: center;
+    border-radius: 3px;
+    font-weight: bold;
+    margin: 10px 0 20px 0;
+}
+
