--- a/app/scss/components/forms.scss
+++ b/app/scss/components/forms.scss
@@ -1,23 +1,45 @@
 .data-input {
     font-size: 16px;
     color: #000;
+    font-family: 'Open Sans', Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-weight: 300;
     background-color: $white;
     border: none;
     outline: none;
     margin: 25px 0;
     display: block;
-    padding: 11px 5px;
+    padding: 11px 7px;
 
     &:first-child { margin-top: 0; }
     &:last-child { margin-bottom: 0; }
 }
 
 
-::-webkit-input-placeholder {color:#000;}
-::-moz-placeholder          {color:#000;}/* Firefox 19+ */
-:-moz-placeholder           {color:#000;}/* Firefox 18- */
-:-ms-input-placeholder      {color:#000;}
+::-webkit-input-placeholder {
+    color:#000;
+    font-family: 'Open Sans', Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-weight: 300;
+}
+
+/* Firefox 19+ */
+::-moz-placeholder {
+    color:#000;
+    font-family: 'Open Sans', Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-weight: 300;
+}
+
+/* Firefox 18- */
+:-moz-placeholder {
+    color:#000;
+    font-family: 'Open Sans', Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-weight: 300;
+}
+
+:-ms-input-placeholder {
+    color:#000;
+    font-family: 'Open Sans', Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-weight: 300;
+}
 
 
 label {
@@ -62,13 +84,14 @@ input[type="radio"] {
     }
 
     &:after {
-        content: '\e800';
-        font-family: 'icon-font';
-        font-size: 11px;
+        content: '';
+        width: 8px;
+        height: 7px;
+        background-image: url('../img/check.png');
         position: absolute;
         display: none;
-        top: 7px;
-        left: 1px;
+        top: 8px;
+        left: 3px;
         color: #000;
     }
 
