--- a/app/scss/components/grid.scss
+++ b/app/scss/components/grid.scss
@@ -21,3 +21,15 @@
     width: 100% / $total-columns*$i;
   }
 }
+
+
+.clearfix {
+  &:before,
+  &:after {
+    content: " "; // 1
+    display: table; // 2
+  }
+  &:after {
+    clear: both;
+  }
+}
