--- a/app/scss/components/typography.scss
+++ b/app/scss/components/typography.scss
@@ -26,3 +26,11 @@
     margin: 20px 0;
     font-weight: normal;
 }
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.lowercase {
+    text-transform: lowercase;
+}
