--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -11,3 +11,12 @@
 @import "components/info.scss";
 @import "components/forms.scss";
 @import "components/buttons.scss";
+@import "components/table.scss";
+@import "components/sup-footer.scss";
+@import "components/footer.scss";
+@import "components/popup.scss";
+@import "components/top-content.scss";
+@import "components/future-content.scss";
+@import "components/informer.scss";
+@import "components/side-list.scss";
+@import "components/news.scss";
