--- a/app/scss/components/footer.scss
+++ b/app/scss/components/footer.scss
@@ -20,6 +20,7 @@
         font-size: 14px;
         line-height: 18px;
         font-weight: 300;
+        display: block;
     }
 
     .phone-number {
@@ -28,5 +29,6 @@
         font-weight: bold;
         margin: 0;
         padding: 0;
+        display: block;
     }
 }
