--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,7 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Open Sans', Arial, "Helvetica Neue", Helvetica, sans-serif; }
+  font-family: 'Open Sans', Arial, "Helvetica Neue", Helvetica, sans-serif;
+  background-color: #0054a4; }
 
 .container {
   width: 980px;
@@ -547,13 +548,15 @@ input[type="checkbox"], input[type="radio"] {
   .contacts .sup-phone-text {
     font-size: 14px;
     line-height: 18px;
-    font-weight: 300; }
+    font-weight: 300;
+    display: block; }
   .contacts .phone-number {
     font-size: 34px;
     line-height: 32px;
     font-weight: bold;
     margin: 0;
-    padding: 0; }
+    padding: 0;
+    display: block; }
 
 .popup {
   width: 400px;
@@ -615,13 +618,15 @@ input[type="checkbox"], input[type="radio"] {
       box-sizing: border-box;
       margin: 10px 14px;
       font-size: 16px;
-      color: #e15f25; }
+      color: #e15f25;
+      display: block; }
     .top-content__item .text {
       font-size: 13px;
       line-height: 18px;
       color: #000;
       font-weight: 300;
-      margin: 10px 14px; }
+      margin: 10px 14px;
+      display: block; }
     .top-content__item:nth-child(1), .top-content__item:nth-child(2) {
       margin-top: 0; }
     .top-content__item:nth-of-type(2n+1) {
@@ -639,7 +644,8 @@ input[type="checkbox"], input[type="radio"] {
     width: 33.33%;
     box-sizing: border-box;
     padding: 0 10px;
-    margin: 0 0 20px 0; }
+    margin: 0 0 20px 0;
+    vertical-align: top; }
     .future-content__item:nth-child(3n) {
       padding-right: 0;
       padding-left: 20px; }
@@ -660,7 +666,8 @@ input[type="checkbox"], input[type="radio"] {
         font-weight: 300; }
     .future-content__item-inner {
       margin-top: 20px;
-      width: 100%; }
+      width: 100%;
+      vertical-align: top; }
     .future-content__item-person {
       width: 100%;
       background-color: #fff;
