--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -18,7 +18,7 @@ body {
 .text-right {
   text-align: right; }
 
-div:active, div:focus, button:active, button:focus, input:active, input:focus, textarea:active, textarea:focus {
+a:active, a:focus, div:active, div:focus, button:active, button:focus, input:active, input:focus, textarea:active, textarea:focus {
   outline: none; }
 
 .row {
@@ -166,7 +166,9 @@ div:active, div:focus, button:active, button:focus, input:active, input:focus, t
       padding: 15px 12px;
       text-decoration: none;
       display: inline-block;
-      vertical-align: middle; }
+      vertical-align: middle;
+      -webkit-transition: all .3s;
+              transition: all .3s; }
       .top-menu__item > a.active {
         background-color: #0054a4; }
       .top-menu__item > a:hover {
@@ -256,6 +258,7 @@ div:active, div:focus, button:active, button:focus, input:active, input:focus, t
       padding-left: 15px; }
 
 .page-index .page-content__main {
+  margin-top: 18px;
   margin-bottom: 0; }
 
 .side-menu {
@@ -271,7 +274,9 @@ div:active, div:focus, button:active, button:focus, input:active, input:focus, t
       color: #000;
       padding: 9px 8px;
       border-radius: 3px;
-      text-decoration: none; }
+      text-decoration: none;
+      -webkit-transition: all .3s;
+              transition: all .3s; }
       .side-menu__item > a:hover {
         background-color: #e15f25;
         color: #fff; }
@@ -463,7 +468,9 @@ input[type="checkbox"], input[type="radio"] {
   border: none;
   outline: none;
   padding: 11px 15px;
-  display: inline-block; }
+  display: inline-block;
+  -webkit-transition: all .3s;
+          transition: all .3s; }
   .btn--blue {
     background-color: #0054a4; }
     .btn--blue:hover {
@@ -486,27 +493,42 @@ input[type="checkbox"], input[type="radio"] {
   font-weight: bold;
   margin: 10px 0 20px 0; }
 
-.table {
+.table2 {
   border: 0;
   outline: 0;
   border-spacing: 0;
   width: 100%;
   border-collapse: collapse;
   margin: 20px 0; }
-  .table > thead {
+  .table2 > thead {
     background-color: #e15f25;
     color: #fff;
     font-size: 16px;
     font-weight: 300; }
-  .table > tbody {
+  .table2 > tbody {
     color: #000;
     font-weight: 300;
     font-size: 16px; }
-    .table > tbody > tr:nth-child(2n) {
+    .table2 > tbody > tr:nth-child(2n) {
       background-color: #e6f2fd; }
-  .table tr > td {
+  .table2 tr > td {
     padding: 9px;
     padding-left: 40px; }
+
+.table1, .table0 {
+  width: 100%;
+  font-size: 16px;
+  font-weight: 300;
+  color: #000; }
+  .table1 td, .table0 td {
+    padding: 9px;
+    padding-left: 40px; }
+
+.table1 {
+  border: 1px solid #000;
+  border-collapse: collapse; }
+  .table1 td {
+    border: 1px solid #000; }
 
 .sup-footer {
   background-color: #0054a4; }
@@ -523,7 +545,9 @@ input[type="checkbox"], input[type="radio"] {
       font-size: 18px;
       color: #fff;
       text-decoration: underline;
-      font-weight: 300; }
+      font-weight: 300;
+      -webkit-transition: all .3s;
+              transition: all .3s; }
       .footer-menu__item > a:hover {
         text-decoration: none; }
     .footer-menu__item:first-child {
@@ -763,7 +787,8 @@ input[type="checkbox"], input[type="radio"] {
     text-decoration: underline;
     font-size: 17px;
     line-height: 20px;
-    color: #0054a4; }
+    color: #0054a4;
+    font-weight: 300; }
 
 .news-content {
   margin: 4px 0 12px;
