--- a/app/scss/components/buttons.scss
+++ b/app/scss/components/buttons.scss
@@ -6,6 +6,7 @@
     outline: none;
     padding: 11px 15px;
     display: inline-block;
+    transition: all .3s;
 
     &--blue {
         background-color: $blue;
