--- a/app/scss/components/header.scss
+++ b/app/scss/components/header.scss
@@ -32,6 +32,7 @@
             text-decoration: none;
             display: inline-block;
             vertical-align: middle;
+            transition: all .3s;
 
             &.active {
                 background-color: $blue;
