--- a/app/scss/components/news.scss
+++ b/app/scss/components/news.scss
@@ -10,6 +10,7 @@
             font-size: 17px;
             line-height: 20px;
             color: $blue;
+            font-weight: 300;
         }
     }
 }
