--- a/app/scss/components/side-menu.scss
+++ b/app/scss/components/side-menu.scss
@@ -14,6 +14,7 @@
             padding: 9px 8px;
             border-radius: 3px;
             text-decoration: none;
+            transition: all .3s;
 
             &:hover {
                 background-color: $orange;
