--- a/app/scss/components/forms.scss
+++ b/app/scss/components/forms.scss
@@ -43,14 +43,15 @@
 
 
 label {
-    display: block;
+    display: inline-block;
     box-sizing: border-box;
-    padding-left: 20px;
+    padding-left: 15px;
     font-size: 15px;
     font-weight: 300;
     margin: 15px 0;
-    margin-left: 15px;
     position: relative;
+    vertical-align: middle;
+    max-width: 93%;
 
     &:first-of-type { margin-top: 0; }
     &:last-of-type { margin-bottom: 0; }
@@ -60,62 +61,41 @@ label {
     }
 }
 
-input[type="checkbox"],
-input[type="radio"] {
-    display: none;
+// input[type="checkbox"],
+// input[type="radio"] {
+//     &:checked + label:after {
+//         display: block;
+//     }
+// }
 
-    &:checked + label:after {
-        display: block;
-    }
-}
+.jq-checkbox {
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    box-sizing: border-box;
+    border: 2px solid $blue;
+    vertical-align: top;
+    top: 4px;
+    margin: auto;
 
-.chckbox {
-    &:before {
-        content: '';
-        display: block;
-        position: absolute;
-        width: 14px;
-        height: 14px;
-        box-sizing: border-box;
-        border: 2px solid #000;
-        top: 4px;
-        left: 0;
-        margin: auto;
-    }
-
-    &:after {
-        content: '';
-        width: 8px;
-        height: 7px;
+    &.checked {
         background-image: url('../img/check.png');
-        position: absolute;
-        display: none;
-        top: 8px;
-        left: 3px;
+        background-repeat: no-repeat;
+        background-position: center center;
         color: #000;
     }
-
-    &--blue:after,
-    &--blue:before {
-        border-color: $blue;
-        color: $blue;
-    }
 }
 
-.radio {
-    &:before {
-        content: '';
+.jq-radio {
         display: block;
-        position: absolute;
         width: 14px;
         height: 14px;
         box-sizing: border-box;
-        border: 2px solid #000;
+        border: 2px solid $blue;
         border-radius: 50%;
+        vertical-align: top;
         top: 4px;
-        left: 0;
-        margin: auto;
-    }
+        position: relative;
 
     &:after {
         content: '';
@@ -124,16 +104,16 @@ input[type="radio"] {
         width: 8px;
         height: 8px;
         border-radius: 50%;
-        color: #000;
-        top: 7px;
-        left: 3px;
-    }
-
-    &--blue:before {
-        border-color: $blue;
-    }
-
-    &--blue:after {
         background-color: $blue;
+        top: 1px;
+        left: 1px;
     }
+
+    &.checked:after {
+        display: block;
+    }
+}
+
+.input-wrapper {
+    margin: 10px 0;
 }
