--- a/app/scss/components/side-list.scss
+++ b/app/scss/components/side-list.scss
@@ -38,8 +38,7 @@
             width: 5px;
             height: 5px;
             background-color: $blue;
-            top: 0;
-            bottom: 0;
+            top: 10px;
             margin: auto;
             left: 0;
         }
