--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,8 +1,79 @@
+@font-face {
+  font-family: 'Open Sans';
+  src: url('../font/opensans-bold-webfont.eot');
+  src: url('../font/opensans-bold-webfont.eot?#iefix') format('embedded-opentype'), url('../font/opensans-bold-webfont.woff') format('woff'), url('../font/opensans-bold-webfont.ttf') format('truetype'), url('../font/opensans-bold-webfont.svg#open_sansbold') format('svg');
+  font-weight: 700;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url('../font/opensans-italic-webfont.eot');
+  src: url('../font/opensans-italic-webfont.eot?#iefix') format('embedded-opentype'), url('../font/opensans-italic-webfont.woff') format('woff'), url('../font/opensans-italic-webfont.ttf') format('truetype'), url('../font/opensans-italic-webfont.svg#open_sansitalic') format('svg');
+  font-weight: normal;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url('../font/opensans-light-webfont.eot');
+  src: url('../font/opensans-light-webfont.eot?#iefix') format('embedded-opentype'), url('../font/opensans-light-webfont.woff') format('woff'), url('../font/opensans-light-webfont.ttf') format('truetype'), url('../font/opensans-light-webfont.svg#open_sanslight') format('svg');
+  font-weight: 300;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url('../font/opensans-regular-webfont.eot');
+  src: url('../font/opensans-regular-webfont.eot?#iefix') format('embedded-opentype'), url('../font/opensans-regular-webfont.woff') format('woff'), url('../font/opensans-regular-webfont.ttf') format('truetype'), url('../font/opensans-regular-webfont.svg#open_sansregular') format('svg');
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url('../font/opensans-extrabolditalic-webfont.eot');
+  src: url('../font/opensans-extrabolditalic-webfont.eot?#iefix') format('embedded-opentype'), url('../font/opensans-extrabolditalic-webfont.woff') format('woff'), url('../font/opensans-extrabolditalic-webfont.ttf') format('truetype'), url('../font/opensans-extrabolditalic-webfont.svg#open_sansextrabold_italic') format('svg');
+  font-weight: 800;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url('../font/opensans-lightitalic-webfont.eot');
+  src: url('../font/opensans-lightitalic-webfont.eot?#iefix') format('embedded-opentype'), url('../font/opensans-lightitalic-webfont.woff') format('woff'), url('../font/opensans-lightitalic-webfont.ttf') format('truetype'), url('../font/opensans-lightitalic-webfont.svg#open_sanslight_italic') format('svg');
+  font-weight: 300;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url('../font/opensans-semibold-webfont.eot');
+  src: url('../font/opensans-semibold-webfont.eot?#iefix') format('embedded-opentype'), url('../font/opensans-semibold-webfont.woff') format('woff'), url('../font/opensans-semibold-webfont.ttf') format('truetype'), url('../font/opensans-semibold-webfont.svg#open_sanssemibold') format('svg');
+  font-weight: 600;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url('../font/opensans-semibolditalic-webfont.eot');
+  src: url('../font/opensans-semibolditalic-webfont.eot?#iefix') format('embedded-opentype'), url('../font/opensans-semibolditalic-webfont.woff') format('woff'), url('../font/opensans-semibolditalic-webfont.ttf') format('truetype'), url('../font/opensans-semibolditalic-webfont.svg#open_sanssemibold_italic') format('svg');
+  font-weight: 600;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url('../font/opensans-bolditalic-webfont.eot');
+  src: url('../font/opensans-bolditalic-webfont.eot?#iefix') format('embedded-opentype'), url('../font/opensans-bolditalic-webfont.woff') format('woff'), url('../font/opensans-bolditalic-webfont.ttf') format('truetype'), url('../font/opensans-bolditalic-webfont.svg#open_sansbold_italic') format('svg');
+  font-weight: 700;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url('../font/opensans-extrabold-webfont.eot');
+  src: url('../font/opensans-extrabold-webfont.eot?#iefix') format('embedded-opentype'), url('../font/opensans-extrabold-webfont.woff') format('woff'), url('../font/opensans-extrabold-webfont.ttf') format('truetype'), url('../font/opensans-extrabold-webfont.svg#open_sansextrabold') format('svg');
+  font-weight: 800;
+  font-style: normal; }
+
 body {
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', Arial, "Helvetica Neue", Helvetica, sans-serif;
-  background-color: #0054a4; }
+  background-color: #0054a4;
+  min-width: 980px; }
 
 .container {
   width: 980px;
@@ -81,66 +152,6 @@ a:active, a:focus, div:active, div:focus, button:active, button:focus, input:act
 .clearfix:after {
   clear: both; }
 
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../font/OpenSans-Regular.ttf') format('truetype');
-  font-weight: 400;
-  font-style: normal; }
-
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../font/OpenSans-Italic.ttf') format('truetype');
-  font-weight: 400;
-  font-style: italic; }
-
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../font/OpenSans-SemiBold.ttf') format('truetype');
-  font-weight: 600;
-  font-style: normal; }
-
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../font/OpenSans-SemiBoldItalic.ttf') format('truetype');
-  font-weight: 600;
-  font-style: italic; }
-
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../font/OpenSans-Bold.ttf') format('truetype');
-  font-weight: 700;
-  font-style: normal; }
-
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../font/OpenSans-BoldItalic.ttf') format('truetype');
-  font-weight: 700;
-  font-style: italic; }
-
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../font/OpenSans-Light.ttf') format('truetype');
-  font-weight: 300;
-  font-style: normal; }
-
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../font/OpenSans-LightItalic.ttf') format('truetype');
-  font-weight: 300;
-  font-style: italic; }
-
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../font/OpenSans-ExtraBold.ttf') format('truetype');
-  font-weight: 800;
-  font-style: normal; }
-
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../font/OpenSans-ExtraBoldItalic.ttf') format('truetype');
-  font-weight: 800;
-  font-style: italic; }
-
 .header {
   background-color: #e15f25; }
 
@@ -163,7 +174,7 @@ a:active, a:focus, div:active, div:focus, button:active, button:focus, input:act
     .top-menu__item > a {
       font-size: 13px;
       color: #fff;
-      padding: 15px 12px;
+      padding: 15px 11.5px;
       text-decoration: none;
       display: inline-block;
       vertical-align: middle;
@@ -188,7 +199,8 @@ a:active, a:focus, div:active, div:focus, button:active, button:focus, input:act
   z-index: 100; }
   .sub-menu__item {
     padding: 10px 0;
-    border-bottom: 1px dotted #6698c8; }
+    border-bottom: 1px dotted #6698c8;
+    position: relative; }
     .sub-menu__item:first-child {
       padding-top: 5px; }
     .sub-menu__item:last-child {
@@ -198,7 +210,38 @@ a:active, a:focus, div:active, div:focus, button:active, button:focus, input:act
       text-decoration: none;
       display: block;
       font-size: 13px;
-      color: #fff; }
+      color: #fff;
+      -webkit-transition: all .3s;
+              transition: all .3s; }
+
+.sub-sub-menu {
+  display: none;
+  list-style: none;
+  position: absolute;
+  background-color: #0054a4;
+  margin: 0;
+  padding: 0;
+  top: 0;
+  width: 165px;
+  padding: 18px;
+  box-sizing: border-box;
+  left: 145px; }
+  .sub-sub-menu__item {
+    padding: 10px 0;
+    border-bottom: 1px dotted #6698c8;
+    position: relative; }
+    .sub-sub-menu__item:first-child {
+      padding-top: 5px; }
+    .sub-sub-menu__item:last-child {
+      padding-bottom: 5px;
+      border: none; }
+    .sub-sub-menu__item > a {
+      text-decoration: none;
+      display: block;
+      font-size: 13px;
+      color: #fff;
+      -webkit-transition: all .3s;
+              transition: all .3s; }
 
 .promo {
   background-color: #cce4fa;
@@ -213,13 +256,13 @@ a:active, a:focus, div:active, div:focus, button:active, button:focus, input:act
     font-size: 70px;
     color: #000;
     font-weight: bold;
-    top: 0;
+    top: 25px;
     left: 25px;
     margin: 0; }
     .promo-block .promo-text > span {
       text-transform: uppercase; }
   .promo-block .promo-image {
-    width: 100%;
+    max-width: 100%;
     height: 100%; }
 
 .page-content-wrapper {
@@ -276,31 +319,33 @@ a:active, a:focus, div:active, div:focus, button:active, button:focus, input:act
       border-radius: 3px;
       text-decoration: none;
       -webkit-transition: all .3s;
-              transition: all .3s; }
+              transition: all .3s;
+      font-weight: 300; }
       .side-menu__item > a:hover {
         background-color: #e15f25;
         color: #fff; }
 
-.breadcrumbs {
-  margin: 10px 0; }
-  .breadcrumbs-list {
-    list-style: none;
-    margin: 0;
-    padding: 0; }
-    .breadcrumbs-list .breadcrumbs-list__item {
-      display: inline-block;
-      margin-right: 10px; }
-      .breadcrumbs-list .breadcrumbs-list__item > a {
-        display: inline-block;
-        padding-left: 5px;
-        font-size: 15px;
-        color: #000; }
-      .breadcrumbs-list .breadcrumbs-list__item:first-child > a {
-        padding-left: 0; }
-      .breadcrumbs-list .breadcrumbs-list__item:last-child {
-        margin-right: 0; }
-        .breadcrumbs-list .breadcrumbs-list__item:last-child > a {
-          text-decoration: none; }
+.breadcrumbs-list {
+  margin: 10px 0;
+  padding: 0; }
+  .breadcrumbs-list__separator {
+    font-size: 15px;
+    color: #000;
+    margin: 0 5px;
+    display: inline-block; }
+  .breadcrumbs-list__item {
+    display: inline-block;
+    margin-right: 10px;
+    font-size: 15px;
+    color: #000;
+    padding-left: 5px; }
+    .breadcrumbs-list__item:hover {
+      text-decoration: none; }
+    .breadcrumbs-list__item:first-child {
+      padding-left: 0; }
+    .breadcrumbs-list__item:last-child {
+      margin-right: 0;
+      text-decoration: none; }
 
 .h1 {
   font-size: 25px;
@@ -344,8 +389,13 @@ a:active, a:focus, div:active, div:focus, button:active, button:focus, input:act
     .info-text:first-of-type {
       margin-top: 0; }
     .info-text > a {
-      text-decoration: underline; }
+      text-decoration: underline;
+      -webkit-transition: all .3s;
+              transition: all .3s; }
+      .info-text > a:hover {
+        text-decoration: none; }
   .info-img {
+    max-width: 100%;
     margin-right: 15px;
     margin-bottom: 15px;
     margin-top: 8px; }
@@ -360,11 +410,15 @@ a:active, a:focus, div:active, div:focus, button:active, button:focus, input:act
   outline: none;
   margin: 25px 0;
   display: block;
-  padding: 11px 7px; }
+  padding: 11px 7px;
+  box-sizing: border-box; }
   .data-input:first-child {
     margin-top: 0; }
   .data-input:last-child {
     margin-bottom: 0; }
+  .data-input.error {
+    border: 1px solid #DB4343;
+    box-shadow: inset 0 0 3px #DB4343; }
 
 ::-webkit-input-placeholder {
   color: #000;
@@ -549,11 +603,13 @@ label {
 
 .stat {
   opacity: .8;
-  margin-top: 33px; }
+  margin-top: 33px;
+  max-width: 30%; }
 
 .contacts {
   color: #fff;
-  margin: 23px 0; }
+  margin: 23px 0;
+  max-width: 30%; }
   .contacts .sup-phone-text {
     font-size: 14px;
     line-height: 18px;
@@ -570,16 +626,30 @@ label {
 .popup {
   width: 400px;
   text-align: center;
-  background-color: #0054a4;
-  border-radius: 5px;
-  border: 2px solid #e15f25;
-  display: none; }
+  background-color: #cce4fa;
+  border: 4px solid #0054a4;
+  display: none;
+  position: relative; }
   .popup-text {
     font-size: 20px;
     display: inline-block;
     padding: 40px 0;
-    color: #fff;
+    color: #000;
     font-weight: 300; }
+  .popup-close {
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    background-color: #0054a4;
+    top: -12px;
+    right: -12px; }
+    .popup-close:hover {
+      cursor: pointer; }
+    .popup-close > span {
+      font-size: 20px;
+      line-height: 24px;
+      font-weight: bold;
+      color: #cce4fa; }
 
 .top-content {
   width: 100%;
@@ -754,8 +824,7 @@ label {
       width: 5px;
       height: 5px;
       background-color: #0054a4;
-      top: 0;
-      bottom: 0;
+      top: 10px;
       margin: auto;
       left: 0; }
     .side-list__item > a {
