--- a/app/scss/components/base.scss
+++ b/app/scss/components/base.scss
@@ -3,6 +3,7 @@ body {
     padding: 0;
     font-family: 'Open Sans', Arial, "Helvetica Neue", Helvetica, sans-serif;
     background-color: $blue;
+    min-width: 980px;
 }
 
 .container {
