--- a/app/scss/components/breadcrumbs.scss
+++ b/app/scss/components/breadcrumbs.scss
@@ -1,35 +1,32 @@
-.breadcrumbs {
+.breadcrumbs-list {
     margin: 10px 0;
+    padding: 0;
 
-    &-list {
-        list-style: none;
-        margin: 0;
-        padding: 0;
+    &__separator {
+        font-size: 15px;
+        color: #000;
+        margin: 0 5px;
+        display: inline-block;
+    }
 
-        .breadcrumbs-list__item {
-            display: inline-block;
-            margin-right: 10px;
+    &__item {
+        display: inline-block;
+        margin-right: 10px;
+        font-size: 15px;
+        color: #000;
+        padding-left: 5px;
 
-            & > a {
-                display: inline-block;
-                padding-left: 5px;
-                font-size: 15px;
-                color: #000;
-            }
+        &:hover {
+            text-decoration: none;
+        }
 
-            &:first-child {
-                & > a {
-                    padding-left: 0;
-                }
-            }
+        &:first-child {
+            padding-left: 0;
+        }
 
-            &:last-child {
-                margin-right: 0;
-
-                & > a {
-                    text-decoration: none;
-                }
-            }
+        &:last-child {
+            margin-right: 0;
+            text-decoration: none;
         }
     }
 }
