--- a/app/scss/components/forms.scss
+++ b/app/scss/components/forms.scss
@@ -9,9 +9,15 @@
     margin: 25px 0;
     display: block;
     padding: 11px 7px;
+    box-sizing: border-box;
 
     &:first-child { margin-top: 0; }
     &:last-child { margin-bottom: 0; }
+
+    &.error {
+        border: 1px solid #DB4343;
+        box-shadow: inset 0 0 3px #DB4343;
+    }
 }
 
 
