--- a/app/scss/components/popup.scss
+++ b/app/scss/components/popup.scss
@@ -1,16 +1,36 @@
 .popup {
     width: 400px;
     text-align: center;
-    background-color: $blue;
-    border-radius: 5px;
-    border: 2px solid $orange;
+    background-color: $lightblue;
+    border: 4px solid $blue;
     display: none;
+    position: relative;
 
     &-text {
         font-size: 20px;
         display: inline-block;
         padding: 40px 0;
-        color: $white;
+        color: #000;
         font-weight: 300;
+    }
+
+    &-close {
+        width: 24px;
+        height: 24px;
+        position: absolute;
+        background-color: $blue;
+        top: -12px;
+        right: -12px;
+
+        &:hover {
+            cursor: pointer;
+        }
+
+        & > span {
+            font-size: 20px;
+            line-height: 24px;
+            font-weight: bold;
+            color: $lightblue;
+        }
     }
 }
