--- a/app/scss/components/promo.scss
+++ b/app/scss/components/promo.scss
@@ -13,7 +13,7 @@
         font-size: 70px;
         color: #000;
         font-weight: bold;
-        top: 0;
+        top: 25px;
         left: 25px;
         margin: 0;
 
@@ -23,7 +23,7 @@
     }
 
     .promo-image {
-        width: 100%;
+        max-width: 100%;
         height: 100%;
     }
 }
