--- a/app/scss/components/side-menu.scss
+++ b/app/scss/components/side-menu.scss
@@ -15,6 +15,7 @@
             border-radius: 3px;
             text-decoration: none;
             transition: all .3s;
+            font-weight: 300;
 
             &:hover {
                 background-color: $orange;
